# Online_mart_Project

./: README.md  Readme.md  compose.yaml
inventory_services/: .env  Dockerfile  pyproject.toml
inventory_services/inventory_services/: Producer_for_order.py  consumer_for_order.py  conusmer.py  database.py  event_consuming.py  main.py  model.py  producer.py  setting.py
notification_services/: .env  Dockerfile  pyproject.toml
notification_services/notification_services/: database.py  email_services.py  main.py  send_email.py  setting.py
notification_services/notification_services/Consumer/: kafka_order_consumer.py  kafka_payment_consumer.py  kafka_user_consumer.py
order_services/: .env  Dockerfile  pyproject.toml
order_services/order_services/: authenticate.py  consumer.py  database.py  main.py  producer.py  setting.py  utils.py
payment_services/: .env  Dockerfile  pyproject.toml
payment_services/payment_services/: consumer.py  database.py  kafka_event.py  main.py  model.py  producer.py  schema.py  setting.py
product_services/: .env  .gitignore  Dockerfile  pyproject.toml
product_services/product_services/: consumer.py  database.py  main.py  producer.py  product_event.py  setting.py
user_services/: .env  Dockerfile  pyproject.toml
user_services/user_services/: consumer.py  database.py  main.py  model.py  producer.py  schema.py  setting.py  topic.py  utils.py
