[tool.poetry]
name = "notification-services-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notification_services"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlmodel = "^0.0.22"
aiokafka = "^0.11.0"
uvicorn = {extras = ["binary"], version = "^0.31.1"}
psycopg2 = "^2.9.9"
aiosmtplib = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
