[tool.poetry]
name = "user-services-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "user_services"}]

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.11.0"
sqlmodel = "^0.0.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["binary"], version = "^0.31.1"}
psycopg2 = "^2.9.9"
fastapi = "^0.115.2"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
